# eeg-server

./: .dockerignore  .editorconfig  .env  .env.development.example  .env.example  .env.local.example  .env.production.example  .env.staging.example  .gitignore  .mise.toml  .prettierignore  CONTRIBUTING.md  README.md  bunfig.toml  docker-compose.development.yml  docker-compose.override.yml  docker-compose.production.yml  docker-compose.staging.yml  docker-compose.test.yml  docker-compose.yml  eslint.config.mjs  issue.md  package.json  prettier.config.cjs  pyproject.toml  tsconfig.base.json
.coolify/: .env  docker-compose.development.yml  docker-compose.production.yml  docker-compose.staging.yml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  chore.yml  docs_improvement.yml  feature_request.yml  performance.yml  refactor.yml  regression.yml
.github/workflows/: ci.yml  generate-coolify-compose.yml  integration-test.yml  security.yml
auth_manager/: Dockerfile  package.json  tsconfig.json
auth_manager/src/: index.ts  main.ts
bench-results/: docker-stats-baseline-rep1-10s.txt  docker-stats-baseline-rep1-15s-c12.txt  docker-stats-baseline-rep1-15s-c16.txt  docker-stats-baseline-rep1-20s.txt  docker-stats-baseline-rep1-30s.txt  docker-stats-baseline-rep2-15s-c12.txt  docker-stats-baseline-rep2-15s.txt  docker-stats-baseline-rep2-30s.txt  docker-stats-baseline-rep4-15s-c12.txt  docker-stats-baseline-rep4-15s-c16.txt  docker-stats-baseline-rep4-15s.txt  docker-stats-baseline-rep4-30s.txt  docker-stats-optimized-rep1-10s.txt  docker-stats-optimized-rep1-15s-c12.txt  docker-stats-optimized-rep1-15s-c16.txt  docker-stats-optimized-rep1-20s.txt  docker-stats-optimized-rep1-30s.txt  docker-stats-optimized-rep2-15s-c12.txt  docker-stats-optimized-rep2-15s.txt  docker-stats-optimized-rep2-30s.txt  docker-stats-optimized-rep4-15s-c12.txt  docker-stats-optimized-rep4-15s-c16.txt  docker-stats-optimized-rep4-15s.txt  docker-stats-optimized-rep4-30s.txt  summary-baseline-rep1-10s.txt  summary-baseline-rep1-15s-c12.txt  summary-baseline-rep1-15s-c16.txt  summary-baseline-rep1-20s.txt  summary-baseline-rep1-30s.txt  summary-baseline-rep2-15s-c12.txt  summary-baseline-rep2-15s.txt  summary-baseline-rep2-30s.txt  summary-baseline-rep4-15s-c12.txt  summary-baseline-rep4-15s-c16.txt  summary-baseline-rep4-15s.txt  summary-baseline-rep4-30s.txt  summary-optimized-rep1-10s.txt  summary-optimized-rep1-15s-c12.txt  summary-optimized-rep1-15s-c16.txt  summary-optimized-rep1-20s.txt  (+8 more)
bids_exporter/: Dockerfile  pyproject.toml  requirements.txt
bids_exporter/src/: bids_logic.py  db.py  main.py  minio_utils.py  schemas.py  task_manager.py
bids_exporter/src/app/: schemas.py  server.py
bids_exporter/src/config/: env.py
bids_exporter/src/domain/: __init__.py  bids.py  tasks.py
bids_exporter/src/infrastructure/: __init__.py  db.py  minio.py  object_storage.py
bids_manager/: Dockerfile  requirements.txt
bids_manager/src/: main.py
bids_output/: participants.tsv
collector/: Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
collector/src/: index.ts  main.ts  server.ts
collector/test/: standalone_test.ts
data_linker/: Dockerfile  package.json  tsconfig.json
data_linker/src/: index.ts  main.ts
db/: init.sql
docker/: Dockerfile.bun  Dockerfile.python
docs/: issue-4-amqp-binary-zstd.md
erp_neuro_marketing/: Dockerfile  requirements.txt
erp_neuro_marketing/src/: auth.py  bids_client.py  db.py  main.py
event_corrector/: Dockerfile  bunfig.toml  package.json  tsconfig.json
event_corrector/src/: index.ts  main.ts
integration_test/: Dockerfile  README.md  REDOME.md  package.json  run-tests.sh  tsconfig.json
integration_test/assets/: calibration_events.csv  events_log.csv  main_task_events.csv  neuro_cal_events.csv  neuro_main_events.csv  neuro_products.csv  stimuli_definition.csv
integration_test/src/: main.test.ts
media_processor/: Dockerfile  package-lock.json  package.json  tsconfig.json
media_processor/src/: index.ts  main.ts
nginx/: Dockerfile  nginx.conf
observability_dashboard/: package.json  tsconfig.json
observability_dashboard/src/: main.ts
processor/: Dockerfile  package-lock.json  package.json  requirements.txt  tsconfig.json
processor/src/: index.ts  main.py  main.ts
realtime_analyzer/: Dockerfile  requirements.txt
realtime_analyzer/src/: main.py
session_manager/: Dockerfile  package-lock.json  package.json  tsconfig.json
session_manager/src/: index.ts  main.ts
shared/: objectStorage.ts
stimulus_asset_processor/: Dockerfile  package.json  tsconfig.json
stimulus_asset_processor/src/: index.ts  main.ts
tools/: dummy_data_sender.py  quick_v2_test.sh  requirements.test.txt
tools/analysis/: read_bids_data.py  requirements.txt
tools/dev/: bench_ingest.sh  compose.bench.override.yml  run_e2e_test.sh  setup_py_dev_venv.sh
typings/fastapi/: __init__.pyi  responses.pyi
typings/flask/: __init__.pyi
typings/httpx/: __init__.pyi
typings/matplotlib/: __init__.pyi  cm.pyi  pyplot.pyi
typings/minio/: __init__.pyi
typings/mne/: __init__.pyi  decoding.pyi
typings/mne_bids/: __init__.pyi
typings/mne_connectivity/: __init__.pyi  viz.pyi
typings/numpy/: __init__.pyi
typings/pandas/: __init__.pyi
typings/pika/: __init__.pyi  exceptions.pyi
typings/sklearn/: dummy.pyi  (+3 more)
(+130 files in other folders)
