[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eeg-server"
version = "0.1.0"
description = "EEG data services and tooling"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
bids_exporter = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.29.0",
  "psycopg2-binary==2.9.9",
  "minio==7.2.7",
  "mne==1.6.1",
  "mne-bids==0.15",
  "pydantic==2.8.2",
  "python-dotenv==1.0.1",
  "zstandard==0.22.0",
  "pandas==2.2.2",
  "pika==1.3.2",
  "edfio==0.4.9",
  "EDFlib-Python==1.0.8",
]
realtime_analyzer = [
  "flask==3.0.3",
  "gunicorn==22.0.0",
  "pika==1.3.2",
  "psycopg2-binary==2.9.9",
  "zstandard==0.22.0",
  "numpy==1.26.4",
  "mne==1.6.1",
  "mne-connectivity==0.6.0",
  "matplotlib==3.8.4",
]
erp_neuro_marketing = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.29.0",
  "psycopg2-binary==2.9.9",
  "requests==2.32.3",
  "mne==1.6.1",
  "mne-bids==0.15",
  "pandas==2.2.2",
  "scikit-learn==1.5.1",
  "numpy==1.26.4",
  "openai==1.40.0",
]
analysis = [
  "mne>=1.6",
  "mne-bids==0.15",
  "matplotlib",
]

[tool.setuptools]
py-modules = []

[tool.ruff]
# Python 3.11 throughout the project (see Dockerfiles)
target-version = "py311"
line-length = 100

# Keep default excludes and add project-specific outputs
extend-exclude = [
  "bids_output/**",
  "**/.venv/**",
  "**/.mypy_cache/**",
  "**/__pycache__/**",
]

[tool.ruff.lint]
# Base rule sets: pycodestyle errors/warnings (E/W), pyflakes (F),
# isort (I), pyupgrade (UP), flake8-bugbear (B)
select = ["E", "W", "F", "I", "UP", "B"]
fixable = ["ALL"]

[tool.ruff.format]
# Align with Prettier width and LF newlines
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pyright]
# Keep editor and CI in sync via pyproject-managed Pyright settings.
pythonVersion = "3.11"
typeCheckingMode = "basic"

# Use local venv at ./.venv
venvPath = "."
venv = ".venv"

# Limit analysis scope to our Python packages/scripts
include = [
  "bids_exporter/src",
  "realtime_analyzer/src",
  "erp_neuro_marketing/src",
  "tools/analysis",
]
exclude = [
  "**/.venv/**",
  "bids_output/**",
  "**/__pycache__/**",
]

# Reduce noise from third-party libraries without type stubs
reportMissingTypeStubs = "none"
reportMissingImports = "warning"
