[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eeg-server"
version = "0.1.0"
description = "EEG data services and tooling"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
bids_exporter = [
  "fastapi==0.120.0",
  "uvicorn[standard]==0.38.0",
  "psycopg2-binary==2.9.11",
  "minio==7.2.18",
  "mne==1.10.2",
  "mne-bids==0.17.0",
  "pydantic==2.12.3",
  "python-dotenv==1.2.1",
  "zstandard==0.25.0",
  "pandas==2.3.3",
  "pika==1.3.2",
  "edfio==0.4.10",
  "EDFlib-Python==1.0.8",
]
realtime_analyzer = [
  "flask==3.1.2",
  "gunicorn==23.0.0",
  "pika==1.3.2",
  "psycopg2-binary==2.9.11",
  "zstandard==0.25.0",
  "numpy==2.3.4",
  "mne==1.10.2",
  "mne-connectivity==0.7.0",
  "matplotlib==3.10.7",
]
erp_neuro_marketing = [
  "fastapi==0.120.0",
  "uvicorn[standard]==0.38.0",
  "psycopg2-binary==2.9.11",
  "requests==2.32.5",
  "mne==1.10.2",
  "mne-bids==0.17.0",
  "pandas==2.3.3",
  "scikit-learn==1.7.2",
  "numpy==2.3.4",
  "openai==2.6.1",
  "google-genai==1.46.0",
]
analysis = ["mne>=1.6", "mne-bids==0.17.0", "matplotlib"]

[tool.setuptools]
py-modules = []

[tool.ruff]
# Python 3.11 throughout the project (see Dockerfiles)
target-version = "py311"
line-length = 100

# Keep default excludes and add project-specific outputs
extend-exclude = [
  "bids_output/**",
  "**/.venv/**",
  "**/.mypy_cache/**",
  "**/__pycache__/**",
]

[tool.ruff.lint]
# Base rule sets: pycodestyle errors/warnings (E/W), pyflakes (F),
# isort (I), pyupgrade (UP), flake8-bugbear (B)
select = ["E", "W", "F", "I", "UP", "B"]
fixable = ["ALL"]

[tool.ruff.format]
# Align with Prettier width and LF newlines
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pyright]
# Keep editor and CI in sync via pyproject-managed Pyright settings.
pythonVersion = "3.11"
typeCheckingMode = "basic"

# Use local venv at ./.venv
venvPath = "."
venv = ".venv"

# Limit analysis scope to our Python packages/scripts
include = [
  "bids_exporter/src",
  "realtime_analyzer/src",
  "erp_neuro_marketing/src",
  "tools/analysis",
]
stubPath = "typings"
exclude = ["**/.venv/**", "bids_output/**", "**/__pycache__/**"]

# Reduce noise from third-party libraries without type stubs
reportMissingTypeStubs = "none"
reportMissingImports = "warning"
reportMissingModuleSource = "none"
