[tool.poetry]
name = "bids-exporter"
version = "0.1.0"
description = "BIDS Exporter Service - Asynchronous Worker"
authors = ["EEG Platform Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
psycopg2-binary = "^2.9.9"
minio = "^7.2.7"
mne = "^1.6.1"
mne-bids = "^0.15"
pydantic = "^2.8.2"
python-dotenv = "^1.0.1"
zstandard = "^0.22.0"
pandas = "^2.2.2"
pika = "^1.3.2"
edfio = "^0.4.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
